--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,13 @@
-name: CI
+name: Auto-merge
 
-on: [pull_request]
+on: [check_run]
 jobs:
 
-  build:
-    name: Build
+  automerge:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Set up Go 1.12
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.12
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
-
-      - name: Build
-        run: make build
-
-      - name: Test
-        run: make test
+      - name: Automerge
+        needs: build
+        uses: pascalgn/automerge-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
