--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -22,9 +22,9 @@ mergeable:
         no_empty:
           enabled: true
           message: 'Description matter and should not be empty. Provide detail with **what** was changed, **why** it was changed, and **how** it was changed.'
-      - do: approvals
-        min:
-          count: 1
-        required:
-          assignees: true
-          message: 'All assignees must approve this PR before merging.'
+#      - do: approvals
+#        min:
+#          count: 1
+#        required:
+#          assignees: true
+#          message: 'All assignees must approve this PR before merging.'
