--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,8 @@
 pull_request_rules:
-  - name: automatic merge on CI success and review
+  - name: Automatic merge
     conditions:
-      - status-success=Mergeable
+      - base=master
+      - "#approved-reviews-by>=1"
     actions:
       merge:
-        method: merge
+        strict: true
